src/main/resources/user/61b77fc8-af0f-413a-8a86-61819f35dff8/log.txt
printWrite: Here is the standard output of the command:

printWrite: Here is the standard error of the command (if any):

hello.java:1: error: reached end of file while parsing
hello
^
1 error
Error: Could not find or load main class hello
